added new (missing) helper files for bullet stuff
Signed-off-by: Miles Whiticker <miles.whiticker@gmail.com>

--- a/Space_Fortress_12/Space_Fortress_12.vcxproj
+++ b/Space_Fortress_12/Space_Fortress_12.vcxproj
@@ -18,7 +18,7 @@
     <ClCompile Include="Application_Update.cpp" />
     <ClCompile Include="Atom.cpp" />
     <ClCompile Include="AtomManager.cpp" />
-    <ClCompile Include="BuildPoint.cpp" />
+    <ClCompile Include="BulletHelper.cpp" />
     <ClCompile Include="Button.cpp" />
     <ClCompile Include="Girder.cpp" />
     <ClCompile Include="Client.cpp" />
@@ -49,11 +49,11 @@
     <ClCompile Include="UID.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="BuildPoint.hpp" />
     <ClInclude Include="Application.hpp" />
     <ClInclude Include="Atom.hpp" />
     <ClInclude Include="AtomManager.hpp" />
     <ClInclude Include="BtOgreHelper.hpp" />
+    <ClInclude Include="BulletHelper.hpp" />
     <ClInclude Include="Button.hpp" />
     <ClInclude Include="Cached.hpp" />
     <ClInclude Include="Girder.hpp" />
