--- a/Space_Fortress_12/Space_Fortress_12.vcxproj.filters
+++ b/Space_Fortress_12/Space_Fortress_12.vcxproj.filters
@@ -189,6 +189,12 @@
     <ClCompile Include="Structure.cpp">
       <Filter>Source Files\Atoms\Structure</Filter>
     </ClCompile>
+    <ClCompile Include="MapCell.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Turf.cpp">
+      <Filter>Source Files\Atoms</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GlueScreen.hpp">
@@ -304,6 +310,15 @@
     </ClInclude>
     <ClInclude Include="Structure.hpp">
       <Filter>Header Files\Atoms\Structure</Filter>
+    </ClInclude>
+    <ClInclude Include="MapDefines.h">
+      <Filter>Header Files\Config</Filter>
+    </ClInclude>
+    <ClInclude Include="MapCell.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Turf.hpp">
+      <Filter>Header Files\Atoms</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
