--- a/Space_Fortress_12/Space_Fortress_12.vcxproj
+++ b/Space_Fortress_12/Space_Fortress_12.vcxproj
@@ -33,6 +33,7 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MainMenu.cpp" />
     <ClCompile Include="MapCell.cpp" />
+    <ClCompile Include="MapHelper.cpp" />
     <ClCompile Include="MapSuite.cpp" />
     <ClCompile Include="MeshStrider.cpp" />
     <ClCompile Include="Mob.cpp" />
@@ -73,6 +74,7 @@
     <ClInclude Include="InputModule_ObserverFlight.hpp" />
     <ClInclude Include="iVector3.h" />
     <ClInclude Include="MapCell.hpp" />
+    <ClInclude Include="MapHelper.hpp" />
     <ClInclude Include="MapSuite.hpp" />
     <ClInclude Include="MeshStrider.h" />
     <ClInclude Include="MapDefines.h" />
@@ -124,7 +126,7 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <LinkIncremental>true</LinkIncremental>
+    <LinkIncremental>false</LinkIncremental>
     <OutDir>$(SolutionDir)/bin/$(Configuration)/</OutDir>
     <IncludePath>$(SolutionDir)\include;$(SolutionDir)\include\MyGui;$(SolutionDir)\include\OGRE;$(SolutionDir)\include\Common;$(IncludePath)</IncludePath>
     <LibraryPath>$(SolutionDir)/lib/$(Configuration);$(LibraryPath)</LibraryPath>
