updated underlay plating to work with new construction system (almost exact copypaste, todo: merge with overlayplating somehow), updated underlay plating material, plating does not seem to get destroyed when a girder is reverted to a buildpoint
Signed-off-by: Miles Whiticker <miles.whiticker@gmail.com>

--- a/Space_Fortress_12/Space_Fortress_12.vcxproj
+++ b/Space_Fortress_12/Space_Fortress_12.vcxproj
@@ -50,6 +50,7 @@
     <ClCompile Include="tinyxml2.cpp" />
     <ClCompile Include="Turf.cpp" />
     <ClCompile Include="UID.cpp" />
+    <ClCompile Include="UnderlayPlating.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application.hpp" />
@@ -94,6 +95,7 @@
     <ClInclude Include="tinyxml2.h" />
     <ClInclude Include="Turf.hpp" />
     <ClInclude Include="UID.hpp" />
+    <ClInclude Include="UnderlayPlating.hpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="num2string.inl" />
