refactored some atom level creation stuff (which propogated downwards onto a million things, many of which also got cleanups), added the beginnings of a lighting system, fixed up random player spawn positions + related mob stuff, there appears to be a bug where platings get misplaced
Signed-off-by: Miles Whiticker <miles.whiticker@gmail.com>

--- a/Space_Fortress_12/Space_Fortress_12.vcxproj
+++ b/Space_Fortress_12/Space_Fortress_12.vcxproj
@@ -30,6 +30,7 @@
     <ClCompile Include="guicon.cpp" />
     <ClCompile Include="InputModule.cpp" />
     <ClCompile Include="InputModule_ObserverFlight.cpp" />
+    <ClCompile Include="LightFixture.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MainMenu.cpp" />
     <ClCompile Include="MapCell.cpp" />
@@ -74,6 +75,7 @@
     <ClInclude Include="InputModule.hpp" />
     <ClInclude Include="InputModule_ObserverFlight.hpp" />
     <ClInclude Include="iVector3.h" />
+    <ClInclude Include="LightFixture.hpp" />
     <ClInclude Include="MapCell.hpp" />
     <ClInclude Include="MapHelper.hpp" />
     <ClInclude Include="MapSuite.hpp" />
