added grav plates (nonfunctional, just constructable structures for now), tweaked some observer selection stuff
Signed-off-by: Miles Whiticker <miles.whiticker@gmail.com>

--- a/Space_Fortress_12/Space_Fortress_12.vcxproj
+++ b/Space_Fortress_12/Space_Fortress_12.vcxproj
@@ -24,6 +24,7 @@
     <ClCompile Include="Client.cpp" />
     <ClCompile Include="DebugDrawer.cpp" />
     <ClCompile Include="EffectManager.cpp" />
+    <ClCompile Include="GravPlates.cpp" />
     <ClCompile Include="InputModule_Generic.cpp" />
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="GlueScreen.cpp" />
@@ -67,6 +68,7 @@
     <ClInclude Include="DebugDrawer.h" />
     <ClInclude Include="Direction.h" />
     <ClInclude Include="EffectManager.hpp" />
+    <ClInclude Include="GravPlates.hpp" />
     <ClInclude Include="InputModule_Generic.hpp" />
     <ClInclude Include="Files.hpp" />
     <ClInclude Include="GameManager.hpp" />
