--- a/Space_Fortress_12/Space_Fortress_12.vcxproj
+++ b/Space_Fortress_12/Space_Fortress_12.vcxproj
@@ -25,11 +25,14 @@
     <ClCompile Include="DebugDrawer.cpp" />
     <ClCompile Include="EffectManager.cpp" />
     <ClCompile Include="GravPlates.cpp" />
+    <ClCompile Include="Human.cpp" />
     <ClCompile Include="InputModule_Generic.cpp" />
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="GlueScreen.cpp" />
     <ClCompile Include="guicon.cpp" />
     <ClCompile Include="InputModule.cpp" />
+    <ClCompile Include="InputModule_MobWalk.cpp" />
+    <ClCompile Include="InputModule_MouseLook.cpp" />
     <ClCompile Include="InputModule_ObserverFlight.cpp" />
     <ClCompile Include="LightFixture.cpp" />
     <ClCompile Include="Main.cpp" />
@@ -69,12 +72,15 @@
     <ClInclude Include="Direction.h" />
     <ClInclude Include="EffectManager.hpp" />
     <ClInclude Include="GravPlates.hpp" />
+    <ClInclude Include="Human.hpp" />
     <ClInclude Include="InputModule_Generic.hpp" />
     <ClInclude Include="Files.hpp" />
     <ClInclude Include="GameManager.hpp" />
     <ClInclude Include="GlueScreen.hpp" />
     <ClInclude Include="guicon.h" />
     <ClInclude Include="InputModule.hpp" />
+    <ClInclude Include="InputModule_MobWalk.hpp" />
+    <ClInclude Include="InputModule_MouseLook.hpp" />
     <ClInclude Include="InputModule_ObserverFlight.hpp" />
     <ClInclude Include="iVector3.h" />
     <ClInclude Include="LightFixture.hpp" />
