--- a/Space_Fortress_12/Space_Fortress_12.vcxproj.filters
+++ b/Space_Fortress_12/Space_Fortress_12.vcxproj.filters
@@ -207,6 +207,15 @@
     <ClCompile Include="GravPlates.cpp">
       <Filter>Source Files\Atoms\Structure</Filter>
     </ClCompile>
+    <ClCompile Include="Human.cpp">
+      <Filter>Source Files\Atoms\Mob</Filter>
+    </ClCompile>
+    <ClCompile Include="InputModule_MobWalk.cpp">
+      <Filter>Source Files\InputModule</Filter>
+    </ClCompile>
+    <ClCompile Include="InputModule_MouseLook.cpp">
+      <Filter>Source Files\InputModule</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GlueScreen.hpp">
@@ -343,6 +352,15 @@
     </ClInclude>
     <ClInclude Include="GravPlates.hpp">
       <Filter>Header Files\Atoms\Structure</Filter>
+    </ClInclude>
+    <ClInclude Include="Human.hpp">
+      <Filter>Header Files\Atoms\Mob</Filter>
+    </ClInclude>
+    <ClInclude Include="InputModule_MobWalk.hpp">
+      <Filter>Header Files\InputModule</Filter>
+    </ClInclude>
+    <ClInclude Include="InputModule_MouseLook.hpp">
+      <Filter>Header Files\InputModule</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
