split the mouselook input module into moblook (for physical mobs like the human player) and observerlook so that i can revisit it later and add proper in-character field of view, added possessmob and ghostmob input modules so that clients can "ghost" out of their human player mob and back in again, made mobs raycast periodically to check if they're on the ground + made it so mobs can walk/sprint/jump on the ground, made mobs orient themselves to the direction of gravity, rewrote camera resets so that there can be individual camera offsets on a per-mob basis,
Signed-off-by: Miles Whiticker <miles.whiticker@gmail.com>

--- a/Space_Fortress_12/Space_Fortress_12.vcxproj
+++ b/Space_Fortress_12/Space_Fortress_12.vcxproj
@@ -32,9 +32,12 @@
     <ClCompile Include="GlueScreen.cpp" />
     <ClCompile Include="guicon.cpp" />
     <ClCompile Include="InputModule.cpp" />
+    <ClCompile Include="InputModule_GhostMob.cpp" />
+    <ClCompile Include="InputModule_MobLook.cpp" />
     <ClCompile Include="InputModule_MobWalk.cpp" />
-    <ClCompile Include="InputModule_MouseLook.cpp" />
+    <ClCompile Include="InputModule_ObserverLook.cpp" />
     <ClCompile Include="InputModule_ObserverFlight.cpp" />
+    <ClCompile Include="InputModule_PossessMob.cpp" />
     <ClCompile Include="LightFixture.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MainMenu.cpp" />
@@ -81,9 +84,12 @@
     <ClInclude Include="GlueScreen.hpp" />
     <ClInclude Include="guicon.h" />
     <ClInclude Include="InputModule.hpp" />
+    <ClInclude Include="InputModule_GhostMob.h" />
+    <ClInclude Include="InputModule_MobLook.hpp" />
     <ClInclude Include="InputModule_MobWalk.hpp" />
-    <ClInclude Include="InputModule_MouseLook.hpp" />
+    <ClInclude Include="InputModule_ObserverLook.hpp" />
     <ClInclude Include="InputModule_ObserverFlight.hpp" />
+    <ClInclude Include="InputModule_PossessMob.hpp" />
     <ClInclude Include="iVector3.h" />
     <ClInclude Include="LightFixture.hpp" />
     <ClInclude Include="MapCell.hpp" />
