--- a/Space_Fortress_12/Space_Fortress_12.vcxproj.filters
+++ b/Space_Fortress_12/Space_Fortress_12.vcxproj.filters
@@ -213,11 +213,20 @@
     <ClCompile Include="InputModule_MobWalk.cpp">
       <Filter>Source Files\InputModule</Filter>
     </ClCompile>
-    <ClCompile Include="InputModule_MouseLook.cpp">
-      <Filter>Source Files\InputModule</Filter>
-    </ClCompile>
     <ClCompile Include="GravitySource.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="InputModule_GhostMob.cpp">
+      <Filter>Source Files\InputModule</Filter>
+    </ClCompile>
+    <ClCompile Include="InputModule_PossessMob.cpp">
+      <Filter>Source Files\InputModule</Filter>
+    </ClCompile>
+    <ClCompile Include="InputModule_ObserverLook.cpp">
+      <Filter>Source Files\InputModule</Filter>
+    </ClCompile>
+    <ClCompile Include="InputModule_MobLook.cpp">
+      <Filter>Source Files\InputModule</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -362,11 +371,20 @@
     <ClInclude Include="InputModule_MobWalk.hpp">
       <Filter>Header Files\InputModule</Filter>
     </ClInclude>
-    <ClInclude Include="InputModule_MouseLook.hpp">
-      <Filter>Header Files\InputModule</Filter>
-    </ClInclude>
     <ClInclude Include="GravitySource.hpp">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="InputModule_GhostMob.h">
+      <Filter>Header Files\InputModule</Filter>
+    </ClInclude>
+    <ClInclude Include="InputModule_PossessMob.hpp">
+      <Filter>Header Files\InputModule</Filter>
+    </ClInclude>
+    <ClInclude Include="InputModule_ObserverLook.hpp">
+      <Filter>Header Files\InputModule</Filter>
+    </ClInclude>
+    <ClInclude Include="InputModule_MobLook.hpp">
+      <Filter>Header Files\InputModule</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
