--- a/Space_Fortress_12/Space_Fortress_12.vcxproj
+++ b/Space_Fortress_12/Space_Fortress_12.vcxproj
@@ -20,25 +20,27 @@
     <ClCompile Include="AtomManager.cpp" />
     <ClCompile Include="BulletHelper.cpp" />
     <ClCompile Include="Button.cpp" />
+    <ClCompile Include="Component_old.cpp" />
+    <ClCompile Include="Context.cpp" />
     <ClCompile Include="Events.cpp" />
-    <ClCompile Include="Girder.cpp" />
     <ClCompile Include="Client.cpp" />
     <ClCompile Include="DebugDrawer.cpp" />
     <ClCompile Include="EffectManager.cpp" />
     <ClCompile Include="GravitySource.cpp" />
     <ClCompile Include="GravPlates.cpp" />
     <ClCompile Include="Human.cpp" />
-    <ClCompile Include="InputModule_Generic.cpp" />
+    <ClCompile Include="Interact.cpp" />
+    <ClCompile Include="PlayerGeneric.cpp" />
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="GlueScreen.cpp" />
     <ClCompile Include="guicon.cpp" />
-    <ClCompile Include="InputModule.cpp" />
-    <ClCompile Include="InputModule_GhostMob.cpp" />
-    <ClCompile Include="InputModule_MobLook.cpp" />
-    <ClCompile Include="InputModule_MobWalk.cpp" />
-    <ClCompile Include="InputModule_ObserverLook.cpp" />
-    <ClCompile Include="InputModule_ObserverFlight.cpp" />
-    <ClCompile Include="InputModule_PossessMob.cpp" />
+    <ClCompile Include="Component.cpp" />
+    <ClCompile Include="GhostMob.cpp" />
+    <ClCompile Include="MobLook.cpp" />
+    <ClCompile Include="MobWalk.cpp" />
+    <ClCompile Include="ObserverLook.cpp" />
+    <ClCompile Include="ObserverFlight.cpp" />
+    <ClCompile Include="PossessMob.cpp" />
     <ClCompile Include="LightFixture.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MainMenu.cpp" />
@@ -51,16 +53,18 @@
     <ClCompile Include="Mob.cpp" />
     <ClCompile Include="mtrand.cpp" />
     <ClCompile Include="Object.cpp" />
+    <ClCompile Include="Objects_Build.cpp" />
     <ClCompile Include="Observer.cpp" />
     <ClCompile Include="OgreHelper.cpp" />
     <ClCompile Include="OverlayPlating.cpp" />
     <ClCompile Include="RandHelper.cpp" />
     <ClCompile Include="Server.cpp" />
     <ClCompile Include="Station.cpp" />
-    <ClCompile Include="InputModule_ObserverBuild.cpp" />
+    <ClCompile Include="ObserverBuild.cpp" />
     <ClCompile Include="Structure.cpp" />
     <ClCompile Include="tinyxml2.cpp" />
     <ClCompile Include="Turf.cpp" />
+    <ClCompile Include="GirderBuild.cpp" />
     <ClCompile Include="UID.cpp" />
     <ClCompile Include="UnderlayPlating.cpp" />
   </ItemGroup>
@@ -69,11 +73,13 @@
     <ClInclude Include="Atom.hpp" />
     <ClInclude Include="AtomManager.hpp" />
     <ClInclude Include="BtOgreHelper.hpp" />
+    <ClInclude Include="Buildpoint.hpp" />
     <ClInclude Include="BulletHelper.hpp" />
     <ClInclude Include="Button.hpp" />
     <ClInclude Include="Cached.hpp" />
+    <ClInclude Include="Component_old.hpp" />
+    <ClInclude Include="Context.hpp" />
     <ClInclude Include="Events.hpp" />
-    <ClInclude Include="Girder.hpp" />
     <ClInclude Include="Client.hpp" />
     <ClInclude Include="CollisionDefines.h" />
     <ClInclude Include="DebugDrawer.h" />
@@ -82,18 +88,19 @@
     <ClInclude Include="GravitySource.hpp" />
     <ClInclude Include="GravPlates.hpp" />
     <ClInclude Include="Human.hpp" />
-    <ClInclude Include="InputModule_Generic.hpp" />
+    <ClInclude Include="Component.hpp" />
+    <ClInclude Include="Interact.hpp" />
+    <ClInclude Include="PlayerGeneric.hpp" />
     <ClInclude Include="Files.hpp" />
     <ClInclude Include="GameManager.hpp" />
     <ClInclude Include="GlueScreen.hpp" />
     <ClInclude Include="guicon.h" />
-    <ClInclude Include="InputModule.hpp" />
-    <ClInclude Include="InputModule_GhostMob.hpp" />
-    <ClInclude Include="InputModule_MobLook.hpp" />
-    <ClInclude Include="InputModule_MobWalk.hpp" />
-    <ClInclude Include="InputModule_ObserverLook.hpp" />
-    <ClInclude Include="InputModule_ObserverFlight.hpp" />
-    <ClInclude Include="InputModule_PossessMob.hpp" />
+    <ClInclude Include="MobGhost.hpp" />
+    <ClInclude Include="MobLook.hpp" />
+    <ClInclude Include="MobWalk.hpp" />
+    <ClInclude Include="ObserverLook.hpp" />
+    <ClInclude Include="ObserverFlight.hpp" />
+    <ClInclude Include="PossessMob.hpp" />
     <ClInclude Include="iVector3.h" />
     <ClInclude Include="LightFixture.hpp" />
     <ClInclude Include="MapCell.hpp" />
@@ -105,6 +112,7 @@
     <ClInclude Include="mtrand.h" />
     <ClInclude Include="num2string.h" />
     <ClInclude Include="Object.hpp" />
+    <ClInclude Include="Objects_Build.hpp" />
     <ClInclude Include="Observer.hpp" />
     <ClInclude Include="OgreHelper.hpp" />
     <ClInclude Include="OverlayPlating.hpp" />
@@ -112,10 +120,11 @@
     <ClInclude Include="RandHelper.h" />
     <ClInclude Include="Server.hpp" />
     <ClInclude Include="Station.hpp" />
-    <ClInclude Include="InputModule_ObserverBuild.hpp" />
+    <ClInclude Include="ObserverBuild.hpp" />
     <ClInclude Include="Structure.hpp" />
     <ClInclude Include="tinyxml2.h" />
     <ClInclude Include="Turf.hpp" />
+    <ClInclude Include="GirderBuild.hpp" />
     <ClInclude Include="UID.hpp" />
     <ClInclude Include="UnderlayPlating.hpp" />
   </ItemGroup>
